k8s/manual/config/dev/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend-excoms-app-dev
  labels:
    app: frontend-excoms-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-excoms-app-dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-excoms-app-dev
    spec:
      containers:
        - name: frontend-excoms-app-dev-container
          image: ghcr.io/heavenland-io/web-excoms:1.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr.io-token
