k8s/manual/config/dev/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-excoms-app-dev-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: devapp.excoms.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-excoms-app-dev-service
                port:
                  number: 80
